// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Feature Index page A11y I can see the skip to content link 1`] = `"مواد پر جائیں"`;

exports[`Canonical Feature Index page Analytics ATI 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" src="https://logws1363.ati-host.net?s=598343&amp;s2=95&amp;p=urdu.science.feature_index.51314202.page&amp;x1=[urn%3Abbc%3Acps%3A8c1f4760-de67-744b-bfd2-16eb1e9fd644]&amp;x2=[responsive]&amp;x3=[news-urdu]&amp;x4=[ur]&amp;x7=[index-section]&amp;x8=[simorgh-nojs]&amp;x9=[%DA%A9%D9%88%D8%B1%D9%88%D9%86%D8%A7%2520%D9%88%D8%A7%D8%A6%D8%B1%D8%B3%3A%2520%D8%AA%D8%AD%D9%82%DB%8C%D9%82%D8%8C%2520%D8%AA%D8%B4%D8%AE%DB%8C%D8%B5%2520%D8%A7%D9%88%D8%B1%2520%D8%A7%D8%AD%D8%AA%DB%8C%D8%A7%D8%B7%2520-%2520BBC%2520News%2520%D8%A7%D8%B1%D8%AF%D9%88]&amp;x11=[2020-01-31T08%3A48%3A32.000Z]&amp;x12=[2020-09-29T10%3A13%3A59.000Z]"/>"`;

exports[`Canonical Feature Index page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, اردو",
  "url": "/urdu",
}
`;

exports[`Canonical Feature Index page Footer Anchors should match text and url 2`] = `
{
  "text": "جانیے کہ آپ بی بی سی پر کیوں اعتماد کر سکتے ہیں",
  "url": "https://www.bbc.com/urdu/institutional-49282935",
}
`;

exports[`Canonical Feature Index page Footer Anchors should match text and url 3`] = `
{
  "text": "استعمال کے ضوابط",
  "url": "https://www.bbc.com/urdu/institutional-37588278",
}
`;

exports[`Canonical Feature Index page Footer Anchors should match text and url 4`] = `
{
  "text": "بی بی سی کے بارے میں",
  "url": "https://www.bbc.com/urdu/institutional-37588280",
}
`;

exports[`Canonical Feature Index page Footer Anchors should match text and url 5`] = `
{
  "text": "پرائیویسی پالیسی",
  "url": "https://www.bbc.com/urdu/institutional-37588282",
}
`;

exports[`Canonical Feature Index page Footer Anchors should match text and url 6`] = `
{
  "text": "کوکیز",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Feature Index page Footer Anchors should match text and url 7`] = `
{
  "text": "بی بی سی سے رابطہ کریں",
  "url": "https://www.bbc.co.uk/urdu/send/u50853907",
}
`;

exports[`Canonical Feature Index page Footer Anchors should match text and url 8`] = `
{
  "text": "بیرونی لنکس کے بارے میں ہماری پالیسی.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical Feature Index page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/urdu"`;

exports[`Canonical Feature Index page Footer Paragraphs should match text 1`] = `"© 2024 بی بی سی. بی بی سی بیرونی ویب سائٹس کے مواد کا ذمہ دار نہیں بیرونی لنکس کے بارے میں ہماری پالیسی."`;

exports[`Canonical Feature Index page Header I can see the branding 1`] = `"BBC News, اردو"`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 1`] = `
{
  "text": "صفحۂ اول",
  "url": "/urdu",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 2`] = `
{
  "text": "امریکی صدارتی انتخاب 2024",
  "url": "/urdu/topics/c0w3wed04e3t",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 3`] = `
{
  "text": "پاکستان",
  "url": "/urdu/topics/cjgn7n9zzq7t",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 4`] = `
{
  "text": "آس پاس",
  "url": "/urdu/topics/cl8l9mveql2t",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 5`] = `
{
  "text": "ورلڈ",
  "url": "/urdu/topics/cw57v2pmll9t",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 6`] = `
{
  "text": "کھیل",
  "url": "/urdu/topics/c340q0p2585t",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 7`] = `
{
  "text": "فن فنکار",
  "url": "/urdu/topics/ckdxnx900n5t",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 8`] = `
{
  "text": "سائنس",
  "url": "/urdu/topics/c40379e2ymxt",
}
`;

exports[`Canonical Feature Index page Header Navigation link should match text and url 9`] = `
{
  "text": "ویڈیو",
  "url": "/urdu/topics/c1e0mzr3r2yt",
}
`;

exports[`Canonical Feature Index page Main heading should match text 1`] = `"کورونا وائرس: تحقیق، تشخیص اور احتیاط"`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/urdu/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Feature Index page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Feature Index page SEO Canonical link 1`] = `"http://localhost:7080/urdu/science-51314202"`;

exports[`Canonical Feature Index page SEO Dir attribute 1`] = `"rtl"`;

exports[`Canonical Feature Index page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Feature Index page SEO Heading level 1 1`] = `"کورونا وائرس: تحقیق، تشخیص اور احتیاط"`;

exports[`Canonical Feature Index page SEO Lang attribute 1`] = `"ur"`;

exports[`Canonical Feature Index page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ur",
        "name": "Urdu",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/urdu/science-51314202",
        "@type": "WebPage",
        "name": "کورونا وائرس: تحقیق، تشخیص اور احتیاط",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png",
          "width": 1024,
        },
        "name": "BBC News اردو",
        "publishingPrinciples": "https://www.bbc.com/urdu/institutional-49282935",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png",
      "url": "http://localhost:7080/urdu/science-51314202",
    },
  ],
}
`;

exports[`Canonical Feature Index page SEO OG description 1`] = `"دنیا بھر میں کورونا وائرس سے متاثرہ افراد کی تعداد 25 لاکھ سے تجاوز کر گئی ہے اور دو لاکھ کے قریب اموات ہو چکی ہیں۔ دیکھیے اس وائرس کے بارے میں بی بی سی کی کوریج۔"`;

exports[`Canonical Feature Index page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png"`;

exports[`Canonical Feature Index page SEO OG image alt 1`] = `"BBC News اردو"`;

exports[`Canonical Feature Index page SEO OG locale 1`] = `"ur"`;

exports[`Canonical Feature Index page SEO OG site name 1`] = `"BBC News اردو"`;

exports[`Canonical Feature Index page SEO OG title 1`] = `"کورونا وائرس: تحقیق، تشخیص اور احتیاط - BBC News اردو"`;

exports[`Canonical Feature Index page SEO OG type 1`] = `"website"`;

exports[`Canonical Feature Index page SEO OG url 1`] = `"http://localhost:7080/urdu/science-51314202"`;

exports[`Canonical Feature Index page SEO Page title 1`] = `"کورونا وائرس: تحقیق، تشخیص اور احتیاط - BBC News اردو"`;

exports[`Canonical Feature Index page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Feature Index page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Feature Index page SEO Twitter creator 1`] = `"@bbcurdu"`;

exports[`Canonical Feature Index page SEO Twitter description 1`] = `"دنیا بھر میں کورونا وائرس سے متاثرہ افراد کی تعداد 25 لاکھ سے تجاوز کر گئی ہے اور دو لاکھ کے قریب اموات ہو چکی ہیں۔ دیکھیے اس وائرس کے بارے میں بی بی سی کی کوریج۔"`;

exports[`Canonical Feature Index page SEO Twitter image alt 1`] = `"BBC News اردو"`;

exports[`Canonical Feature Index page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png"`;

exports[`Canonical Feature Index page SEO Twitter site 1`] = `"@bbcurdu"`;

exports[`Canonical Feature Index page SEO Twitter title 1`] = `"کورونا وائرس: تحقیق، تشخیص اور احتیاط - BBC News اردو"`;

exports[`Canonical Feature Index page Sections should match headline text 1`] = `"اہم خبریں"`;

exports[`Canonical Feature Index page Sections should match headline text 2`] = `"ملٹی میڈیاسب دیکھیں"`;

exports[`Canonical Feature Index page Sections should match headline text 3`] = `"فیچر اور تجزیے"`;

exports[`Canonical Feature Index page Sections should match headline text 4`] = `"وائرس کی تاریخ"`;

exports[`Canonical Feature Index page Story Promo Headline should match text 1`] = `"بل گیٹس کورونا وائرس سے متعلق سازشی نظریات کا مرکز کیسے بنے"`;

exports[`Canonical Feature Index page Story Promo Image should match image 1`] = `
<img
  alt="بل گیٹس"
  class="bbc-139onq"
  height="576"
  sizes="(min-width: 1100px) 496px, (min-width: 600px) 45.83vw, 94.29vw"
  src="https://ichef.bbci.co.uk/ace/ws/660/cpsprodpb/B04F/production/_112753154_bill.jpg.webp"
  srcset="https://ichef.bbci.co.uk/ace/ws/70/cpsprodpb/B04F/production/_112753154_bill.jpg.webp 70w, https://ichef.bbci.co.uk/ace/ws/95/cpsprodpb/B04F/production/_112753154_bill.jpg.webp 95w, https://ichef.bbci.co.uk/ace/ws/144/cpsprodpb/B04F/production/_112753154_bill.jpg.webp 144w, https://ichef.bbci.co.uk/ace/ws/183/cpsprodpb/B04F/production/_112753154_bill.jpg.webp 183w, https://ichef.bbci.co.uk/ace/ws/240/cpsprodpb/B04F/production/_112753154_bill.jpg.webp 240w, https://ichef.bbci.co.uk/ace/ws/320/cpsprodpb/B04F/production/_112753154_bill.jpg.webp 320w, https://ichef.bbci.co.uk/ace/ws/660/cpsprodpb/B04F/production/_112753154_bill.jpg.webp 660w"
  style="aspect-ratio:1024 / 576"
  width="1024"
/>
`;

exports[`Canonical Feature Index page Story Promo Link should match text and url 1`] = `
{
  "text": "بل گیٹس کورونا وائرس سے متعلق سازشی نظریات کا مرکز کیسے بنے",
  "url": "/urdu/world-52952106",
}
`;

exports[`Canonical Feature Index page Story Promo Timestamp should match text and date 1`] = `
{
  "date": "2020-06-07",
  "text": "7 جون 2020",
}
`;
